objects/EmployeeSurveyAnswer__c.object
<CustomObject>
    <description>Survey answers as chosen by survey taker.  Includes a field for user input text in case it is  allowed.</description>
    <fields>
        <fullName>EmployeeSurveyAnswerAmount__c</fullName>
        <description>Survey answer in numeric form.</description>
        <inlineHelpText>Survey answer in numeric form.</inlineHelpText>
        <label>Numeric Answer</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyAnswerBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True/false answers.</description>
        <inlineHelpText>True/false answers.</inlineHelpText>
        <label>True/False Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyAnswerDate__c</fullName>
        <description>Survey answer in date form.</description>
        <inlineHelpText>Survey answer in date form.</inlineHelpText>
        <label>Date Answer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeSurveyAnswerEID__c</fullName>
        <description>The Enterprise ID of this Employee Survey Answer.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID of this Employee Survey Answer.</inlineHelpText>
        <label>Employee Survey Answer EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EmployeeSurveyAnswerText__c</fullName>
        <description>Survey answer in text form.</description>
        <inlineHelpText>Survey answer in text form.</inlineHelpText>
        <label>Text Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeSurvey__c</fullName>
        <label>Employee Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipLabel>Employee Survey Answers</relationshipLabel>
        <relationshipName>EmployeeSurveyAnswers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <label>Survey Question</label>
        <referenceTo>SurveyQuestion__c</referenceTo>
        <relationshipName>Survey_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Employee Survey Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmployeeSurvey__c</columns>
        <columns>SurveyQuestion__c</columns>
        <columns>EmployeeSurveyAnswerText__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Employee Survey Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>